k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docusaurus
spec:
  selector:
    app: docusaurus
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
