k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docusaurus
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: docusaurus.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docusaurus
                port:
                  number: 80
